fix: tweak home banner spacing

--- a/src/css/layout/banner.styl
+++ b/src/css/layout/banner.styl
@@ -39,7 +39,7 @@
 	display: flex;
 	position: relative;
 	@media (min-width: 40em) and (max-width: 80em) {
-		padding: 0 0 0 22%;
+		padding: 0;
 	}
 	@media (min-width: 80em) {
 		padding: 0 22% 0 0;
